* 6.4.0 Oct 15 2015
- Fix typo in formatter in MultipleRootNode case
- Fix encoding issue in parsing files (non-utf-8/ascii)
- Support providing an encoding to "formatHTML"

* 6.3.0 Sep 03 2015
- Clarify that a set is better to use for getElementsWithAttrValues as the "attrValues" portion. If used within "Parser" -- make this conversion for them,
  as this is the most common case, and the only one-time-test case. Maybe worth splitting public and private methods to handle such microoptimizations in
  the future
- Support filtering on a custom function. Added "getElementsCustomFilter" to Parser, TagCollection, and AdvancedTag. With Tests.
- Support filtering the direct members of a TagCollection, using filterCollection method. Does not transverse to children. 
- Add AdvancedTag and TagCollection to __init__ (for "from AdvancedHTMLParser import *") 
- Add an integer version tuple, __int_version_tuple__ for easier comparison
- A couple micro optimizations
- Manually cleanup doc a bit

* 6.2.5 Aug 17 2015
- Fix style and class attributes not showing up in outerHTML
- Allow formatHTML script to read from stdin
- Cleanup setup.py to read description from file
- Fix MANIFEST.in

* 6.2.2 Aug 17 2015
- Enable tests that weren't running
- Unify calling .get('key') or ['key'] for tag attributes
- Fix using 'className' with get/set attribute

* 6.2.1 Aug 10 2015
- Add a lot more tests and  provide exception messages to assert keywords
(supported in GoodTests)
- Better error message when trying to set various attributes directly
- Add "setAttributes"  method that takes a dict and allows setting many
attributes at once
- Added nextSibling, nextSiblingElement, previousSibling, previousSiblingElement
- Added insertBefore and insertAfter (latter not present in HTML)

* 6.1.0 Aug 5 2015
- Fix issue where root node  would not get matched in some conditions
- Implement some real tests using GoodTests
- Much better handling of special attributes through a dedicated extension of
dict